# azure-data-pipeline

./: .dockerignore  .env.template  .gitignore  .user.yml  README.md  docker-compose.yml  profiles.yml  pyproject.toml
config/: config.yaml  config.yml
docker/: Dockerfile
k8s/: aiflow-pvc.yaml  airflow-claim0-persistentvolumeclaim.yaml  airflow-claim2-persistentvolumeclaim.yaml  airflow-cm1-configmap.yaml  airflow-deployment.yaml  airflow-service.yaml  etl-app-cm1-configmap.yaml  etl-app-deployment.yaml  etl-app-service.yaml  postgres-deployment.yaml
scripts/: build.sh
src/: main.py
