[project]
name = "azure-data-pipeline"
version = "0.1.0"
description = "A modern ETL data pipeline."
authors = [
    {name = "isacfiorotti",email = "115185340+isacfiorotti@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "dbt-core (>=1.10.7,<2.0.0)",
    "dbt-postgres (>=1.9.0,<2.0.0)"
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

